--- a/web/react/demo/package.json
+++ b/web/react/demo/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
     "antd": "^4.12.2",
+    "query-string": "^6.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
     "uuid": "^8.3.2",
