--- a/web/react/demo/package.json
+++ b/web/react/demo/package.json
@@ -14,6 +14,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "uuid": "^8.3.2",
     "vue": "^2.6.12"
   },
