--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/nonmonkey/study/issues"
   },
-  "homepage": "https://github.com/nonmonkey/study#readme"
+  "homepage": "https://github.com/nonmonkey/study#readme",
+  "dependencies": {
+    "@vueuse/core": "^7.2.2",
+    "element-plus": "^2.1.3",
+    "lodash": "^4.17.21"
+  }
 }
