--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "@vueuse/core": "^7.2.2",
     "element-plus": "^2.1.3",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "rxios": "^2.0.0",
+    "rxjs": "^7.5.5"
   }
 }
