--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "study",
   "version": "1.0.0",
   "description": "All kinds of study materials",
+  "type": "module",
   "main": "test.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
