--- a/web/vue2/demo-vue2.0/package.json
+++ b/web/vue2/demo-vue2.0/package.json
@@ -12,7 +12,9 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.8",
     "md5": "^2.3.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-verification-code": "^1.0.7",
+    "vue-verify-pop": "^0.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
