--- a/web/vue3/my-vue-app/package.json
+++ b/web/vue3/my-vue-app/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-verification-code": "^1.0.7",
+    "vue-verify-pop": "^0.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
